--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ version '1.0.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'jacoco'
+apply plugin: 'com.bmuschko.nexus'
 
 sourceCompatibility = 1.8
 
