--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,20 @@ repositories {
     mavenCentral()
 }
 
+compileJava {
+    options.compilerArgs << '-parameters'
+}
+
 dependencies {
     compile 'com.google.code.findbugs:jsr305:3.0.2'
     compile 'com.rotilho.jnano:jnano-commons:1.0.0'
+    compile 'com.squareup.okhttp3:okhttp:3.10.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.5'
+    compile 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.9.5'
     compileOnly 'org.projectlombok:lombok:1.16.20'
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.18.3'
+    testCompile 'com.github.tomakehurst:wiremock:2.17.0'
 }
 
 jacocoTestReport {
