--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.9.5'
     compileOnly 'org.projectlombok:lombok:1.16.20'
     testCompile 'junit:junit:4.12'
+    testCompile 'org.skyscreamer:jsonassert:1.5.0'
     testCompile 'org.mockito:mockito-core:2.18.3'
     testCompile 'com.github.tomakehurst:wiremock:2.17.0'
 }
