--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.5'
     compile 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.9.5'
 
-    compileOnly 'org.projectlombok:lombok:1.16.20'
+    compile 'org.projectlombok:lombok:1.18.2'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.skyscreamer:jsonassert:1.5.0'
