--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,11 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
-    compile 'com.rotilho.jnano:jnano-commons:1.3.0'
+    compile 'com.rotilho.jnano:jnano-commons:1.4.0-SNAPSHOT'
     compile 'com.squareup.okhttp3:okhttp:3.11.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.7'
     compile 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.9.7'
