--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ plugins {
 }
 
 group 'com.rotilho.jnano'
-version '1.0.0'
+version '1.1.0'
 
 sourceCompatibility = 1.8
 
@@ -26,7 +26,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.rotilho.jnano:jnano-commons:1.4.0-SNAPSHOT'
+    compile 'com.rotilho.jnano:jnano-commons:1.4.1'
     compile 'com.squareup.okhttp3:okhttp:3.11.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.7'
     compile 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.9.7'
